Se ha finalizado la pŕactica...

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-# Este es un listado de los archivos que vamos a ignorar...
+# Este es un listado de los archivos que vamos a ignorar... 
+# (Para ignorar carpetas se usa un ./NombreCarpeta)
     requisitos.txt
